# TAIntelligence

./: CLAUDE.md
backend/: .gitignore  llm_raw_response.txt  main.py  modal_app.py  pyproject.toml
backend/core/: config.py  db.py  r2.py
backend/db/: chats.py  chunks.py  courses.py  documents.py  sections.py  summaries.py  tests.py
backend/routers/: chat.py  courses.py  documents.py  sections.py  summaries.py  tests.py
backend/schemas/: chat.py  courses.py  summaries.py  tests.py
backend/script/: learning_objectives.py
backend/services/: grading.py  ingestion.py  llm.py  response_parser.py  summarization.py  test_generation.py
backend/sql/: schema.sql  schema_chats.sql  schema_chunks.sql  schema_summaries.sql  schema_summary_versions.sql  schema_tests.sql  seed.sql
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/(dashboard)/: CourseGrid.tsx  page.module.css  page.tsx
frontend/app/(dashboard)/course/[id]/: CoursePageClient.tsx  page.module.css  page.tsx
frontend/app/api/chats/[chatId]/messages/: route.ts
frontend/app/api/courses/[courseId]/summaries/: route.ts
frontend/app/api/courses/[courseId]/tests/: route.ts
frontend/app/api/question-sets/[questionSetId]/: route.ts
frontend/app/api/summaries/[summaryId]/: route.ts
frontend/app/api/tests/[testId]/: route.ts
frontend/components/chat/: ChatTab.module.css  ChatTab.tsx  CitationPopover.module.css  CitationPopover.tsx  MessageBubble.module.css  MessageBubble.tsx
frontend/components/course/: ChatTab.module.css  ChatTab.tsx  CourseCard.module.css  CourseCard.tsx  SummarizeTab.tsx  TestTab.module.css  TestTab.tsx
frontend/components/layout/: CourseSidebar.module.css  CourseSidebar.tsx  CourseTabBar.module.css  CourseTabBar.tsx
frontend/components/modals/: AddDocumentModal.module.css  AddDocumentModal.tsx  AddNoteModal.module.css  AddNoteModal.tsx  CreateCourseModal.module.css  CreateCourseModal.tsx
frontend/components/summarize/: NewSummaryPanel.module.css  NewSummaryPanel.tsx  SummarizeTab.module.css  SummarizeTab.tsx  SummaryOptionsPanel.module.css  SummaryOptionsPanel.tsx
frontend/components/test/: QuestionViewer.tsx  TestForm.tsx  TestReview.module.css  TestReview.tsx  TestTab.module.css  TestTab.tsx  TestTaker.module.css  TestTaker.tsx
frontend/lib/: actions.ts  api.ts  courses.ts  queries.ts  streaming.ts  uploads.ts
frontend/lib/actions/: courses.ts
frontend/types/: index.ts
(+7 files in other folders)
